# TrustTunnelFlutterClient

./: .gitignore  Makefile  README.md  analysis_options.yaml  pubspec.yaml
.github/ISSUE_TEMPLATE/: bug report.yaml
.github/workflows/: android.yml  deploy-apps.yml  flutter-build.yml  flutter-lint.yml  flutter-test.yml  mirror.yml  tag-and-deploy.yml  testing.yml
android/: build.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
bamboo-specs/: plan-testing.yaml
bamboo-specs/scripts/: build_app_and_zip.sh  deploy_to_testflight.sh
ios/: Gemfile  Podfile
ios/Runner/: Info.plist  Runner.entitlements
ios/Runner.xcodeproj/: project.pbxproj
ios/Runner/Assets.xcassets/AppIcon.appiconset/: Contents.json
ios/fastlane/: .env  Fastfile  Matchfile
lib/: main.dart  samsung_routine_handler.dart  test_widget.dart
lib/common/assets/: asset_icons.dart  assets_images.dart  font_families.dart
lib/common/constants/: app_constants.dart
lib/common/controller/concurrency/: droppable_controller_handler.dart  restartable_controller_handler.dart  sequential_controller_handler.dart
lib/common/error/: error_utils.dart  exception_utils.dart
lib/common/error/model/: presentation_code_exception.dart  presentation_exception.dart  presentation_field.dart  presentation_field_exception.dart
lib/common/extensions/: context_extensions.dart  enum_extensions.dart  theme_extensions.dart
lib/common/localization/arb/: intl_en.arb  intl_ru.arb
lib/common/logging/: app_logger.dart
lib/common/logging/appenders/: custom_console_appender.dart
lib/common/logging/enum/: logging_level.dart  logging_security_type.dart
lib/common/logging/extensions/: db_logger_extension.dart  global_error_logger_extension.dart  vpn_logger_extension.dart
lib/common/logging/file_appender/: app_log_file_appender.dart  app_log_file_names_builder.dart  (+1 more)
lib/common/router/: app_route.dart  app_routes.dart
lib/common/theme/: light_theme.dart
lib/common/utils/: certificate_encoders.dart  macos_app_window_utils.dart  routing_profile_utils.dart  url_utils.dart  validation_utils.dart
lib/data/database/: app_database.dart  connection.dart
lib/data/datasources/: app_state_logging_datasource.dart  auto_connect_on_launch_settings_datasource.dart  export_logs_local_source.dart  launch_at_login_datasource.dart  log_storage_datasource.dart  logging_settings_datasource.dart  logs_archive_datasource.dart  logs_export_destination_datasource.dart  logs_local_source.dart  open_main_window_on_login_datasource.dart  routing_datasource.dart  server_datasource.dart  settings_datasource.dart  vpn_datasource.dart
lib/data/model/: logs_archive.dart  network_protocol.dart  routing_mode.dart  routing_profile.dart  server.dart  server_data.dart  vpn_log.dart  vpn_logging_payload.dart  vpn_protocol.dart
lib/data/repository/: auto_connect_on_launch_settings_repository.dart  deep_link_repository.dart  export_logs_repository.dart  launch_at_login_repository.dart  logging_settings_repository.dart  open_main_window_on_login_repository.dart  routing_repository.dart  server_repository.dart  settings_repository.dart  vpn_repository.dart
lib/di/common/: initialization_helper.dart
lib/di/factory/: bloc_factory.dart  repository_factory.dart
lib/di/model/: dependency_factory.dart  initialization_helper.dart  repository_factory.dart
lib/feature/app/: app.dart
lib/feature/deep_link/: deep_link_scope.dart
lib/feature/menu_bar/: tray_manager_macos.dart
lib/feature/navigation/: navigation_screen.dart
lib/feature/settings/: settings_screen.dart
lib/view/: custom_alert_dialog.dart  custom_app_bar.dart  progress_wrapper.dart  scaffold_wrapper.dart
lib/view/buttons/: custom_elevated_button.dart  custom_filled_button.dart  custom_floating_action_button.dart  custom_icon_button.dart  custom_outlined_button.dart  custom_text_button.dart
lib/view/common/: custom_arrow_list_tile.dart  custom_radio_list_tile.dart
lib/view/inputs/: custom_text_field.dart
lib/widgets/: custom_snack_bar.dart  discard_changes_dialog.dart
lib/widgets/common/: custom_arrow_list_tile.dart  custom_radio.dart  custom_radio_list_tile.dart  custom_switch_tile.dart
lib/widgets/inputs/: custom_text_field.dart
linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
macos/: Gemfile  Podfile
macos/Extension/: Extension.entitlements
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/LoginHelper/: AppDelegate.swift  Info.plist  LoginHelper.entitlements
macos/Runner/: AppDelegate.swift  DebugProfile.entitlements  Info.plist  LaunchAtLoginManager.swift  MacosExitDialog.swift  MainFlutterWindow.swift  Release.entitlements
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner/Configs/: AppInfo.xcconfig
macos/fastlane/: .env  Fastfile  Matchfile
plugins/vpn_plugin/: Makefile  README.md  pubspec.yaml
plugins/vpn_plugin/android/: build.gradle
plugins/vpn_plugin/example/: README.md  pubspec.yaml
plugins/vpn_plugin/ios/: vpn_plugin.podspec
plugins/vpn_plugin/lib/: api.dart  deep_link_manager.dart  vpn_plugin.dart  vpn_plugin_method_channel.dart  vpn_plugin_platform_interface.dart
plugins/vpn_plugin/linux/: vpn_plugin.cc
plugins/vpn_plugin/macos/: vpn_plugin.podspec
plugins/vpn_plugin/pigeons/: api.dart  platform_api.dart
plugins/vpn_plugin/test/: vpn_plugin_method_channel_test.dart  vpn_plugin_test.dart
plugins/vpn_plugin/windows/: CMakeLists.txt  background_worker.cpp  background_worker.h  ui_thread_dispatcher.cpp  ui_thread_dispatcher.h  vpn_plugin.cpp  vpn_plugin.h  vpn_plugin_c_api.cpp
plugins/vpn_plugin/windows/include/vpn_plugin/: vpn_plugin_c_api.h
plugins/vpn_plugin/windows/runner/: platform_api.g.cpp  platform_api.g.h
plugins/vpn_plugin/windows/test/: vpn_plugin_test.cpp
plugins/vpn_plugin/windows/test/mocks/: vpn_easy_stub_state.h  vpn_easy_stubs.cpp
specs/: TrustTunnelClient.podspec
windows/: .gitignore  CMakeLists.txt
windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
windows/msix/: Build-MSIX.ps1  Setup-TestCert.ps1
(+245 files in other folders)
